--- a/index.html
+++ b/index.html
@@ -53,9 +53,22 @@
             </select>
             <i class="ph-caret-down"></i>
           </div>
-          <button>Buscar agora</button>
+          <button class="btn primary">Buscar agora</button>
         </form>
       </div>
     </header>
+
+    <main>
+      <div class="content">
+        <section class="top">
+          <h2>Blocos recomendados</h2>
+          <div class="view">
+            <button class="btn primary">Lista</button>
+            <button class="btn secondary">Mapa</button>
+          </div>
+        </section>
+        <section class="cards"></section>
+      </div>
+    </main>
   </body>
 </html>
